Implement all the functionalities of IAM-Service and Gateway